<resources>
    <string name="app_name">My Notes</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="hi">Hi.</string>
    <string name="profilelogo">profileLogo</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="saveDataLocally">To Store Notes Locally?</string>
    <string name="create_account">Create Account</string>
    <string name="click_here">Click Here</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_notes_description">Add Notes Description</string>
    <string name="title">Title</string>
</resources>